smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/invalid-newline-after-shape-type.smithy
// Parse error at line 5, column 10 near `\nF`: Expected one or more spaces | Model
$version: "2.0"
namespace smithy.example

structure
Foo {}
